--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             display: flex;
             flex-direction: column;
             width: fit-content; /* Reverted to fit-content */
+            position: relative; /* For any future absolute positioning */
             /* background-color will be set by JS */
         }
 
@@ -61,7 +62,6 @@
             white-space: nowrap; /* Prevent text wrapping */
             /* background-color and color will be set by JS */
             width: fit-content; /* Keep fit-content for background to be near text */
-            /* display: inline-block is no longer needed with flex parent */
             line-height: 1.2; /* Adjust line height for better vertical alignment */
         }
         /* Time display area */
@@ -73,8 +73,23 @@
             white-space: nowrap; /* Prevent text wrapping */
             /* background-color and color will be set by JS */
             width: fit-content; /* Keep fit-content for background to be near text */
-            /* display: inline-block is no longer needed with flex parent */
             line-height: 1.2; /* Adjust line height for better vertical alignment */
+            position: relative; /* Needed for absolute positioning of ::after */
+            overflow: hidden; /* Ensures the progress bar stays within bounds */
+        }
+
+        /* Minute progress bar styles */
+        #time-display::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            height: 4px; /* Thickness of the progress bar */
+            width: var(--progress-width, 0%); /* Controlled by JS, defaults to 0% */
+            background-color: var(--progress-bar-color); /* Set by JS */
+            border-bottom-left-radius: 0.5rem; /* Match parent border-radius */
+            border-bottom-right-radius: 0.5rem; /* Match parent border-radius */
+            transition: width 0.1s linear; /* Smooth animation for width change */
         }
     </style>
 </head>
@@ -89,6 +104,10 @@
     </div>
 
     <script>
+        // グローバルスコープで要素を宣言
+        let timeDisplay;
+        let urlParams; // URLパラメータをグローバルで保持
+
         /**
          * Parses URL parameters and returns them as an object.
          * @returns {Object} An object containing URL parameters.
@@ -101,6 +120,9 @@
                     params[key] = decodeURIComponent(value);
                 }
             });
+            // showProgressBar パラメータの処理
+            // 'true' 文字列の場合は true、それ以外は false として扱う。デフォルトは false。
+            params.showProgressBar = params.showProgressBar === 'true' ? true : false;
             return params;
         }
 
@@ -118,7 +140,27 @@
         }
 
         /**
-         * Updates the current date and time display.
+         * Converts a hex color to an RGBA string.
+         * @param {string} hex - The hex color string (e.g., "#RRGGBB" or "RRGGBB").
+         * @param {number} alpha - The alpha transparency value (0-1).
+         * @returns {string} The RGBA color string.
+         */
+        function hexToRgba(hex, alpha) {
+            let r = 0, g = 0, b = 0;
+            // Handle hex without '#'
+            if (hex.startsWith('#')) {
+                hex = hex.slice(1);
+            }
+            if (hex.length === 6) {
+                r = parseInt(hex.substring(0, 2), 16);
+                g = parseInt(hex.substring(2, 4), 16);
+                b = parseInt(hex.substring(4, 6), 16);
+            }
+            return `rgba(${r}, ${g}, ${b}, ${alpha})`;
+        }
+
+        /**
+         * Updates the current date and time display and the minute indicator.
          */
         function updateDateTime() {
             const now = new Date();
@@ -155,6 +197,24 @@
             const timeFormatter = new Intl.DateTimeFormat(navigator.language, timeOptions);
             const formattedTime = timeFormatter.format(now);
 
+            // Get seconds for minute progress animation
+            const seconds = now.getSeconds();
+
+            // timeDisplayがnullでないことを確認
+            if (!timeDisplay) {
+                return; // 要素がまだ利用できない場合は処理を中断
+            }
+
+            // プログレスバーの表示設定に基づいて幅を計算
+            let progressPercentage = 0;
+            if (urlParams.showProgressBar) {
+                progressPercentage = (seconds / 60) * 100;
+            }
+
+            // Set the CSS variable for the width of the ::after pseudo-element
+            document.documentElement.style.setProperty('--progress-width', `${progressPercentage}%`);
+
+
             // Combine and display date and timezone
             document.getElementById('date-display').textContent = `${formattedDate} (${timeZoneAbbr})`;
             document.getElementById('time-display').textContent = formattedTime;
@@ -162,31 +222,39 @@
 
         // Event listener for DOM content loaded
         document.addEventListener('DOMContentLoaded', () => {
-            const params = getUrlParams();
+            urlParams = getUrlParams(); // URLパラメータを初期化
 
             const body = document.body;
             const mainContainer = document.getElementById('main-container');
             const dateDisplay = document.getElementById('date-display');
-            const timeDisplay = document.getElementById('time-display');
             const dateDisplayWrapper = document.getElementById('date-display-wrapper');
             const timeDisplayWrapper = document.getElementById('time-display-wrapper');
 
+            // DOMContentLoaded内で要素への参照を取得
+            timeDisplay = document.getElementById('time-display');
+
+
             // Apply background color to body
-            body.style.backgroundColor = formatColor(params.bgColor || 'transparent');
+            body.style.backgroundColor = formatColor(urlParams.bgColor || 'transparent');
 
             // Apply background color to main container
-            mainContainer.style.backgroundColor = formatColor(params.containerBgColor || '#FFFFFF');
+            mainContainer.style.backgroundColor = formatColor(urlParams.containerBgColor || '#FFFFFF');
 
             // Apply colors to date display
-            dateDisplay.style.backgroundColor = formatColor(params.dateBgColor || '#E2BEE6');
-            dateDisplay.style.color = formatColor(params.dateTextColor || '#6D2A84');
+            dateDisplay.style.backgroundColor = formatColor(urlParams.dateBgColor || '#E2BEE6');
+            dateDisplay.style.color = formatColor(urlParams.dateTextColor || '#6D2A84');
 
             // Apply colors to time display
-            timeDisplay.style.backgroundColor = formatColor(params.timeBgColor || '#CD93D7');
-            timeDisplay.style.color = formatColor(params.timeTextColor || '#48148A');
+            timeDisplay.style.backgroundColor = formatColor(urlParams.timeBgColor || '#CD93D7');
+            timeDisplay.style.color = formatColor(urlParams.timeTextColor || '#48148A');
+
+            // Set progress bar color based on timeTextColor with some transparency
+            const progressBarBaseColor = formatColor(urlParams.timeTextColor || '#48148A');
+            document.documentElement.style.setProperty('--progress-bar-color', hexToRgba(progressBarBaseColor, 0.8));
+
 
             // Determine justify-content value based on dateAlign parameter
-            const dateAlignment = params.dateAlign || 'left'; // Default to 'left'
+            const dateAlignment = urlParams.dateAlign || 'left'; // Default to 'left'
             let dateJustifyValue;
             switch (dateAlignment) {
                 case 'left':
@@ -206,21 +274,21 @@
             timeDisplayWrapper.style.justifyContent = 'center';
 
             // Apply font sizes if provided
-            if (params.dateFontSize) {
-                dateDisplay.style.fontSize = params.dateFontSize;
+            if (urlParams.dateFontSize) {
+                dateDisplay.style.fontSize = urlParams.dateFontSize;
             }
-            if (params.timeFontSize) {
-                timeDisplay.style.fontSize = params.timeFontSize;
+            if (urlParams.timeFontSize) {
+                timeDisplay.style.fontSize = urlParams.timeFontSize;
             }
 
             // Apply overall scale if provided
-            if (params.scale) {
-                mainContainer.style.transform = `scale(${params.scale})`;
+            if (urlParams.scale) {
+                mainContainer.style.transform = `scale(${urlParams.scale})`;
                 mainContainer.style.transformOrigin = 'center center'; // Scale from the center
             }
 
             // Apply font family if provided, otherwise default to 'Inter'
-            body.style.fontFamily = params.fontFamily ? `${params.fontFamily}, sans-serif` : 'Inter, sans-serif';
+            body.style.fontFamily = urlParams.fontFamily ? `${urlParams.fontFamily}, sans-serif` : 'Inter, sans-serif';
         });
 
         // Update every second
